--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,22 @@
 iframe {
   display: none;
 }
+
+h1 {
+  margin: 0;
+  padding: 0;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+h2 {
+  margin: 0;
+  padding: 0;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
